Fix PR according to reviews